fix - top menu not visible

--- a/js/style.css
+++ b/js/style.css
@@ -37,3 +37,6 @@ table.tablesorter thead tr .headerSortDown {
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
 background-color: #8dbdd8;
 }
+.nav {
+	margin-top:3em;
+}
